welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:10: error: expected class or object definition
 def bloc() {
 ^PictureMono3:22: error: expected class or object definition
 def carre() {
 ^PictureMono3:29: error: expected class or object definition
def faireV() {
^PictureMono3:51: error: Unmatched closing brace '}' ignored here
}
^